git commit -m "Enhance styles for contact page" -m "- Styled the contact form for improved usability and appearance." -m "- Added responsive design for team member section to ensure better layout on various screen sizes." -m "- Included hover effects for buttons to increase interactivity." -m "- Adjusted padding and background colors for better readability." -m "" -m "These changes contribute to a more user-friendly and visually appealing contact page."

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #CABAC8;
-    --secondary-color: #c9c0ce;
+    --primary-color: #fcf1fa;
+    --secondary-color: #470c68;
     --accent1-color: #20191f;
     --accent2-color: #7CDEDC;
     --font-size-large: 2.5em;
